--- a/security.html
+++ b/security.html
@@ -67,7 +67,7 @@
 <p><span class="badge badge-light">San Mateo, California  United States</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/objectstream/jobs/4500330002'>Job Application for Sen II System Security Analyst at Objectstream</a></h5> 
+<h5><a href='https://boards.greenhouse.io/objectstream/jobs/4500330002'>Job Application for Sen II System Security Analyst at Objectstream</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -99,15 +99,15 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/zerofox/e5e4a9f1-e757-4629-be00-e2ce053a376f?hsamp=a6yY1JFFB0tVe&hsamp_network=TWITTER'>ZeroFOX - Security Operations Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/zerofox/e5e4a9f1-e757-4629-be00-e2ce053a376f?hsamp=a6yY1JFFB0tVe&hsamp_network=TWITTER'>ZeroFOX - Security Operations Engineer</a></h5> 
 <p><span class="badge badge-light">Santiago</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oq3V9fwh&__jvst=Employee+Referral&__jvsd=sybKIfwV&__jvsc=Twitter&bid=nVdyqMwn'>ServiceNow Careers - Information Security Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oq3V9fwh&__jvst=Employee+Referral&__jvsd=sybKIfwV&__jvsc=Twitter&bid=nVdyqMwn'>ServiceNow Careers - Information Security Engineer</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA, USA</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oa8mafwy&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nBHqqMwp'>Guidewire Software, Inc. Careers - Senior Product Security Engineer, Penetration Testing - San Mateo, CA</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oa8mafwy&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nBHqqMwp'>Guidewire Software, Inc. Careers - Senior Product Security Engineer, Penetration Testing - San Mateo, CA</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA  San Mateo, CA  San Mateo, California</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -115,7 +115,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vgs/679dbff8-cfe1-42a2-b884-0dd4ef2dade9'>Very Good Security - Middle Software Engineer (Vault)</a></h5> 
+<h5><a href='https://jobs.lever.co/vgs/679dbff8-cfe1-42a2-b884-0dd4ef2dade9'>Very Good Security - Middle Software Engineer (Vault)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -179,11 +179,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/lookingglass/job/ojrNafwr'>LookingGlass Cyber Solutions Careers - Associate Cyber Security Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/lookingglass/job/ojrNafwr'>LookingGlass Cyber Solutions Careers - Associate Cyber Security Analyst</a></h5> 
 <p><span class="badge badge-light">Reston, Virginia  Reston, VA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/liferay/job/ogUrbfww'>Liferay, Inc. Careers - Information Security Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/liferay/job/ogUrbfww'>Liferay, Inc. Careers - Information Security Analyst</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -209,7 +209,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://www.womenwhocode.com/jobs/5413?utm_source=hootsuite&utm_medium=&utm_term=&utm_content=&utm_campaign='>Senior Security Engineer - Remote - Mode | Women Who Code</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.womenwhocode.com/jobs/5413?utm_source=hootsuite&utm_medium=&utm_term=&utm_content=&utm_campaign='>Senior Security Engineer - Remote - Mode | Women Who Code</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -221,7 +221,7 @@
 <p><span class="badge badge-light">Tacoma, Washington</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/infoblox/job/o7Qrbfwj'>Infoblox Careers - Cyber Security Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/infoblox/job/o7Qrbfwj'>Infoblox Careers - Cyber Security Engineer</a></h5> 
 <p><span class="badge badge-light">Burnaby</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -269,7 +269,7 @@
 <p><span class="badge badge-light">Baltimore, Maryland Baltimore, MD</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/fullstory/jobs/4500736002'>Job Application for Security Compliance Analyst at FullStory</a></h5> 
+<h5><a href='https://boards.greenhouse.io/fullstory/jobs/4500736002'>Job Application for Security Compliance Analyst at FullStory</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -281,7 +281,7 @@
 <p><span class="badge badge-light">Sunnyvale, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/infoblox/job/o6npbfwN'>Infoblox Careers - Cyber Security Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/infoblox/job/o6npbfwN'>Infoblox Careers - Cyber Security Engineer</a></h5> 
 <p><span class="badge badge-light">Tacoma, Washington</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -313,7 +313,7 @@
 <p><span class="badge badge-light">Plano, TX</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698543317-etas-internship-embedded-security-analyst-at-the-embedded-security-escrypt-dept-'>Bosch Group ETAS_(Internship)_Embedded Security Analyst at the Embedded Security,Escrypt Dept. | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698543317-etas-internship-embedded-security-analyst-at-the-embedded-security-escrypt-dept-'>Bosch Group ETAS_(Internship)_Embedded Security Analyst at the Embedded Security,Escrypt Dept. | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -382,7 +382,7 @@ tools and services; Work closely with developers to give advice on secure?...</p
 <p><span class="badge badge-light">Burnaby</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=odpWafws&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=ng4SoMwR'>Imperva Careers - Network Security Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=odpWafws&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=ng4SoMwR'>Imperva Careers - Network Security Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -414,7 +414,7 @@ tools and services; Work closely with developers to give advice on secure?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bandwidth/jobs/1929807'>Job Application for Security Compliance Analyst at Bandwidth</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bandwidth/jobs/1929807'>Job Application for Security Compliance Analyst at Bandwidth</a></h5> 
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
