--- a/devops.html
+++ b/devops.html
@@ -52,7 +52,7 @@
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oYSzafwj&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nTB6qMwh'>Guidewire Software, Inc. Careers - Cloud DevOps Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oYSzafwj&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nTB6qMwh'>Guidewire Software, Inc. Careers - Cloud DevOps Manager</a></h5> 
 <p><span class="badge badge-light">Toronto, Canada</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -76,7 +76,7 @@
 <p><span class="badge badge-light">Hamburg Hamburg, Germany</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.invokegeek.com/jobs/site-reliability-devops-engineer-manufacturing-systems/'>Site Reliability/DevOps Engineer, Manufacturing Systems ? invokeGeek</a></h5> 
+<h5><a href='https://www.invokegeek.com/jobs/site-reliability-devops-engineer-manufacturing-systems/'>Site Reliability/DevOps Engineer, Manufacturing Systems ? invokeGeek</a></h5> 
 <p><span class="badge badge-light">United States  Fremont, CA</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -100,7 +100,7 @@
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/couchbase/553f86d3-dd49-4a9d-bba9-8ae01fbe454d'>Couchbase - DevOps Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/couchbase/553f86d3-dd49-4a9d-bba9-8ae01fbe454d'>Couchbase - DevOps Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -112,7 +112,7 @@
 <p><span class="badge badge-light">Tel Aviv, Israel</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/medmen/jobs/4500558002'>Job Application for Staff DevOps Engineer at MedMen</a></h5> 
+<h5><a href='https://boards.greenhouse.io/medmen/jobs/4500558002'>Job Application for Staff DevOps Engineer at MedMen</a></h5> 
 <p><span class="badge badge-light">Culver City, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -156,7 +156,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oQVLafwq&__jvst=Employee+Referral&__jvsd=soBeegwc&__jvsc=Twitter&bid=nINhqMwt'>Jobvite, Inc. Careers - Senior DevOps Tooling Engineer (remote)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oQVLafwq&__jvst=Employee+Referral&__jvsd=soBeegwc&__jvsc=Twitter&bid=nINhqMwt'>Jobvite, Inc. Careers - Senior DevOps Tooling Engineer (remote)</a></h5> 
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -184,7 +184,7 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://solactive.join.com/jobs/461584-administrator-devops-sysops-m-f-d-or-dresden'>Job @ Solactive  (Dresden): Administrator (DevOps/... | JOIN</a></h5> 
+<h5><a href='https://solactive.join.com/jobs/461584-administrator-devops-sysops-m-f-d-or-dresden'>Job @ Solactive  (Dresden): Administrator (DevOps/... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -214,7 +214,7 @@
 <p><span class="badge badge-light">Annapolis Junction, Maryland</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://amswh.avature.net/careers/SendToAFriend?jobId=17390'>Send to a friend - Devops Engineer - External Careers</a></h5> 
+<h5><a href='https://amswh.avature.net/careers/SendToAFriend?jobId=17390'>Send to a friend - Devops Engineer - External Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -256,7 +256,7 @@
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://qustodio.recruitee.com/o/devops-lead'>
+<h5><a href='https://qustodio.recruitee.com/o/devops-lead'>
       DevOps Lead - Qustodio
     </a></h5> 
 <p><span class="badge badge-light">Barcelona, Spain  Barcelona</span></p>
@@ -352,7 +352,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://activesoft.applytojob.com/apply/dnnX5FUIrZ/DevOps-Solution-Architect-Chicago-IL-'>DevOps Solution Architect (Chicago, IL ) - ActiveSoft, Inc - Career Page</a></h5> 
+<h5><a href='http://activesoft.applytojob.com/apply/dnnX5FUIrZ/DevOps-Solution-Architect-Chicago-IL-'>DevOps Solution Architect (Chicago, IL ) - ActiveSoft, Inc - Career Page</a></h5> 
 <p><span class="badge badge-light">Chicago, IL Chicago, IL Chicago, ILChicago, IL</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -378,7 +378,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/deloitte/jobs/4495968002'>Job Application for DevOps Platform Engineer | Platform Engineering at Deloitte</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/deloitte/jobs/4495968002'>Job Application for DevOps Platform Engineer | Platform Engineering at Deloitte</a></h5> 
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -396,7 +396,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://scripbox.recruiterbox.com/jobs/fk03o6w/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://scripbox.recruiterbox.com/jobs/fk03o6w/'>
     Devops Engineer at Scripbox Advisors Private Limited
 </a></h5> 
 <p><span class="badge badge-light">Bangalore</span></p>
@@ -416,7 +416,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://techflow.applytojob.com/apply/iael3W0CxB/DevOps-Engineer'>DevOps Engineer - TechFlow - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://techflow.applytojob.com/apply/iael3W0CxB/DevOps-Engineer'>DevOps Engineer - TechFlow - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 19, 2019 ... Apply to DevOps Engineer at TechFlow in Reston, VA.</p>
 <hr/>
